examples/test/testpolicy19972.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19972
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key10: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
      podSelector:
        matchLabels:
          key41: value18
          key1: value13
          key24: value32
